# EserciziProgrammazione1

./: README.md
Esercizi lezione/: template.c
Esercizi lezione/Liste/: main.c
Esercizi lezione/array_lezione/: main.c
Esercizi lezione/for/: main.c
Esercizi lezione/introduzioneC/: main  main.c  main.dSYM.pkgf
Esercizi lezione/lez_print/: CMakeLists.txt  main.c
Esercizi lezione/lez_puntatori/: main  main.c
Esercizi lezione/maxfra3numeri/: CMakeLists.txt  main.c
Esercizi lezione/operatoriLogici/: CMakeLists.txt  main.c
Esercizi lezione/primoes/: CMakeLists.txt  main.c  pseudocodice.txt
Esercizi lezione/prova/: main  main.c
Esercizi lezione/scanf/: CMakeLists.txt  main.c
Esercizi lezione/secondoes/: CMakeLists.txt  main.c
Esercizi lezione/sorting algoritms/: a.out  bubbld.c  insection_sort.c  main  selection_sort.c
Esercizi lezione/terzoes/: CMakeLists.txt  main.c  terzoes.txt
Esercizi lezione/untitled/: main  main.c
Esercizi lezione/while/: main  main.c
Esercizi slide/: template.c
Esercizi svolti/: 14_01  14_02
Esercizi svolti/C_code/: 7_00_var  7_00_var.c  7_00_var.dSYM.pkgf  7_01_char  7_01_char.c  7_01_char_  7_01_float_h  7_01_float_h.c  7_01_int  7_01_int.c  7_01_sizeof  7_01_sizeof.c  7_01_sizeof.dSYM.pkgf  7_01_unary_op  7_01_unary_op.c  7_02_precision  7_02_precision.c  7_03_overflow  7_03_overflow.c  7_04_casting  7_04_casting.c  7_04_constMath  7_04_constMath.c  7_04_inf  7_04_inf.c  7_04_macro  7_04_macro.c  CMakeLists.txt  a.out  compile.sh  macro
Risoluzione temi d'esame/: a.out  template.c  to-do.txt
(+390 files in other folders)
